--- a/.env.test
+++ b/.env.test
@@ -6,4 +6,4 @@ VITE_APP_SITE_TITLE=h5-test
 
 VITE_BASE_URL=/h5test
 
-VITE_API_URL=https://s.wellread.cn/erp-v2-h5-api/
+VITE_API_URL=https://abc.com/api
