--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "sass": "^1.62.1",
         "unplugin-auto-import": "^0.15.3",
         "unplugin-vue-components": "^0.24.1",
-        "vite": "^4.1.4"
+        "vite": "^4.1.4",
+        "vite-plugin-vue-setup-extend": "^0.4.0"
     }
 }
