--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,16 @@
 {
-  "$schema": "https://json.schemastore.org/prettierrc",
-  "semi": false,
-  "tabWidth": 2,
-  "singleQuote": true,
-  "printWidth": 100,
-  "trailingComma": "none"
+    "$schema": "https://json.schemastore.org/prettierrc",
+    "semi": false,
+    "tabWidth": 4,
+    "singleQuote": true,
+    "printWidth": 300,
+    "proseWrap": "preserve",
+    "arrowParens": "always",
+    "vueIndentScriptAndStyle": true,
+    "singleAttributePerLine": false,
+    "trailingComma": "none",
+    "bracketSpacing": true,
+    "htmlWhitespaceSensitivity": "ignore",
+    "embeddedLanguageFormatting": "auto",
+    "bracketSameLine": true
 }
